# photo_resizer_bot

./: Dockerfile  Makefile  config.ini  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt  utils.py
config/: database.py  media.py
database/: __tables_utils.py  __utils.py  connect.py  queries.json  tables.py  utils.py
resizer/: __init__.py
telegram/: __init__.py  utils.py
telegram/dispatcher/: __init__.py
telegram/handlers/: __handlers.py  __utils.py  base.py  exceptions.py  states_group.py  utils.py
telegram/handlers/__data/: constants.py  objects.py  templates.json
telegram/handlers/commands/l0/start/: messages.py
telegram/handlers/errors/: __init__.py  baseexception.py  log.py
telegram/handlers/keyboards/: __init__.py  inline_button.py  reply_button.py
telegram/handlers/messages/: messages.py
